# richmuscle.github.io

./: .cursorrules  .gitattributes  .gitignore  404.html  AUDIT_REPORT.md  AUDIT_REPORT_2026-04-15.md  CHANGELOG_ARCH.md  CLAUDE.md  Cargo.toml  PATCHES.md  README.md  SECURITY.md  Trunk.toml  build.rs  clippy.toml  deny.toml  flake.nix  index.html  justfile  lighthouserc.json  manifest.json  richardmussell-3adc63e8e8f99381.js  richardmussell-3adc63e8e8f99381_bg.wasm
.cargo/: config.toml
.claude/commands/: session-start.md
.cursor/: PROJECT_LENS.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  deploy.yml  weekly-audit.yml
docs/: ARCHITECTURE.md  AUDIT_SCORE_HISTORY.md  DECISIONS.md  INVENTORY.md  RECRUITER_FIT.md  ROADMAP.md
docs/audits/: 2026-04-16.md  2026-04-20-staff-lens.md  2026-04-20.md  2026-04-21-five-lens.md  2026-04-21.md  STAFF-LENS-RUBRIC.md
docs/restructure/: 00-conflicts.md  01-current-state.md  02-target-structure.md  03-diff-plan.md  04-content-audit.md  04-writeup-verdicts.md  05-writeup-execution-plan.md  ABOUT-PISCES-TIGHTENING-COMPLETE.md  DEAD-CSS-CLEANUP-COMPLETE.md  IDENTITY-CLAIM-REFRAMING-COMPLETE.md  PHASE1-SUMMARY.md  PHASE1-VERIFICATION.md  PHASE1.5-COMPLETE.md  PHASE1.6-COMPLETE.md  PHASE2-PREFLIGHT.md  ROADMAP-REGEN-COMPLETE.md  SESSION-CONTEXT-2026-04-20.md  STAGE2.1-COMPLETE.md  STAGE2.2A-COMPLETE.md  STAGE2.2B-COMPLETE.md  STAGE2.3A-COMPLETE.md  STAGE2.3B-COMPLETE.md  STAGE2.3C-COMPLETE.md  STAGE2.3F-CISCO-COMPLETE.md  STAGE2.3F-WINDOWS-COMPLETE.md  STAGE2.3G-COMPLETE.md  STAGE2.3H-COMPLETE.md  STAGE2.3I-COMPLETE.md  STAGE2.3I-VERIFY-COMPLETE.md  STAGE2.3J-COMPLETE.md  STAGE2.3K-COMPLETE.md  STAGE2.3L-COMPLETE.md  STAGE2.3M-COMPLETE.md
docs/resumes/: resume-devops.md  resume-platform.md  resume-sysadmin.md
docs/rfcs/: 2026-04-11-phase1-ssr-static-export.md
drafts/: resume-platform.md
projects/: terraform-gcp.json
public/: _headers  _redirects  og-image-template.html  robots.txt  sitemap.xml
public/demos/: security-baseline-audit.json
public/docs/: identity-access-lifecycle.json  linux-admin-scripting.json  observability-operational-intelligence.json  security-baseline-audit.json
public/projects/: backup-recovery-continuity.json  endpoint-management-compliance.json  identity-access-lifecycle.json  linux-admin-scripting.json  monitoring-observability.json  observability-operational-intelligence.json  operational-foundation.json  security-baseline-audit.json  terraform-gcp.json  zero-trust-networking.json
public/writeups/: cisco-ios-fundamentals.json  hardening-linux-municipal-environments.json  rust-wasm-edge-runtime-internals.json  service-provisioning-cox-control-planes.json  sixteen-agent-orchestrated-audit.md  soc-observability-pisces-elk-kql.json  the-builders-ledger-orchestrating-technical-outcomes-through-project-governance.json  the-connectivity-fabric-mastering-the-bedrock-of-the-universal-control-plane.json  the-orchestrated-landscape-building-a-high-integrity-ecosystem.json  the-orchestrator-of-intent-reflections-on-service-provisioning.json  windows-server-lab-powershell-automatedlab.json
scripts/: assemble_dist.py  fetch-fonts.sh  og-image-template.html
src/: data.rs  db.rs  error.rs  lib.rs  main.rs  state.rs  utils.rs
src/components/: error_fallback.rs  layout.rs  mod.rs  nav.rs  palette.rs  project.rs  site_footer.rs  terminal.rs  writeup.rs
src/data/: certs.rs  mod.rs  projects.rs  tests.rs  writeups.rs
src/pages/: about.rs  contact.rs  home.rs  mod.rs  not_found.rs  one_pager.rs  project.rs  resume.rs  telemetry.rs  writing.rs
src/utils/: browser.rs  (+1 more)
style/: base.css  style.css  style.scss  tokens.css
tests/: smoke.rs
writeups/: automating-nist-800-53-compliance-with-terraform.json  the-architect-of-oceanic-visibility-soc-operations-at-universal-scale.json  zero-trust-moving-beyond-bastion-hosts.json
(+38 files in other folders)
