[package]
name = "richardmussell"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
publish = false

[lib]
name = "richardmussell"
path = "src/lib.rs"

[features]
default = ["csr", "sqlite"]
csr     = ["leptos/csr",     "leptos_meta/csr",     "leptos_router/csr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr     = ["leptos/ssr",     "leptos_meta/ssr",     "leptos_router/ssr"]
# `ssg` gates the static-site-generator binary (src/bin/ssg.rs).
# It's a superset of `ssr` plus the host-only deps (tokio, etc.) the binary needs.
# Kept separate so `cargo check --features ssr` does not pull in the binary.
ssg     = ["ssr", "dep:tokio"]
# `sqlite` gates the in-browser SQLite portfolio index (src/db.rs).
sqlite  = ["dep:sqlite-wasm-rs"]

[dependencies]
leptos        = { version = "0.6" }
leptos_meta   = { version = "0.6" }
leptos_router = { version = "0.6" }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
thiserror     = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys     = { version = "0.3", features = [
    "console", "Document", "Element",
    "History", "HtmlElement", "HtmlInputElement",
    "KeyboardEvent", "Navigator", "Window"
] }
js-sys      = "0.3"
gloo-net    = { version = "0.5", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
getrandom   = { version = "0.2", features = ["js"] }
sqlite-wasm-rs = { version = "0.5.3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt"], optional = true }

[profile.release]
opt-level        = "z"
lto              = "fat"
codegen-units    = 1
panic            = "abort"
strip            = true
overflow-checks  = false

[profile.ssr-gen]
inherits = "release"
panic    = "unwind"
strip    = false

[[bin]]
name = "ssg"
path = "src/bin/ssg.rs"
required-features = ["ssg"]
